--- a/res/layout/slidingmenu.xml
+++ b/res/layout/slidingmenu.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent" >
+<RelativeLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/slidingmenu_bg"
+		android:padding="16dp">
 
 	<ExpandableListView
 			android:id="@+id/slidingmenu_expandable_list"
 			android:layout_height="match_parent"
 			android:layout_width="match_parent"
+			android:divider="@color/dark_tertiary_text"
+			android:dividerHeight="1dp"
+			android:childDivider="@color/dark_tertiary_text"
 			android:groupIndicator="@null"/>
 
 </RelativeLayout>
