--- a/res/layout/slidingmenu_item.xml
+++ b/res/layout/slidingmenu_item.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:padding="10dp" >
+<RelativeLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent"
+		android:layout_height="48dp"
+		android:orientation="vertical">
 
 	<TextView
 			android:id="@+id/label"
+			android:textSize="18sp"
+			android:textColor="@color/dark_secondary_text"
+			android:fontFamily="sans-serif-light"
+			android:layout_height="40dp"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:gravity="center_vertical"
+			android:layout_alignParentTop="true"
 			android:layout_alignParentLeft="true"
-			android:layout_centerVertical="true"
-			android:paddingLeft="25dp" />
+			android:layout_marginLeft="72dp"/>
 
 </RelativeLayout>
