--- a/res/layout/slidingmenu_item.xml
+++ b/res/layout/slidingmenu_item.xml
@@ -4,7 +4,8 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
 		android:layout_height="48dp"
-		android:orientation="vertical">
+		android:orientation="vertical"
+		android:background="@drawable/bg_selectable">
 
 	<TextView
 			android:id="@+id/label"
