--- a/res/layout/slidingmenu_item.xml
+++ b/res/layout/slidingmenu_item.xml
@@ -3,9 +3,9 @@
 <RelativeLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
-		android:layout_height="48dp"
-		android:orientation="vertical"
-		android:background="@drawable/bg_selectable">
+		android:layout_height="wrap_content"
+		android:background="@drawable/bg_selectable"
+		android:orientation="vertical">
 
 	<TextView
 			android:id="@+id/label"
