--- a/res/layout/slidingmenu_item_expandable.xml
+++ b/res/layout/slidingmenu_item_expandable.xml
@@ -5,8 +5,8 @@
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="48dp"
-		android:orientation="vertical"
-		android:background="@drawable/bg_selectable">
+		android:background="@drawable/bg_selectable"
+		android:orientation="vertical">
 
 	<TextView
 			android:id="@+id/icon"
