--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,16 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/home_root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/ptr_layout"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
 
-	<TextView android:id="@+id/home_label"
-			  android:text="Welcome to the home screen."
-			  android:layout_width="wrap_content"
-			  android:fontFamily="sans-serif-light"
-			  android:layout_height="wrap_content"
-			  android:layout_alignParentTop="true"
-			  android:layout_centerHorizontal="true"
-			  android:layout_marginTop="25dp"
-			  android:textSize="24dp"/>
-</RelativeLayout>
+	<RelativeLayout
+		android:id="@+id/home_root"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:orientation="vertical" >
+
+		<TextView android:id="@+id/home_label"
+				  android:text="Welcome to the home screen."
+				  android:layout_width="wrap_content"
+				  android:fontFamily="sans-serif-light"
+				  android:layout_height="wrap_content"
+				  android:layout_alignParentTop="true"
+				  android:layout_centerHorizontal="true"
+				  android:layout_marginTop="25dp"
+				  android:textSize="24dp"/>
+	</RelativeLayout>
+</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
