--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -8,7 +8,8 @@
 		android:id="@+id/home_root"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:orientation="vertical" >
+		android:orientation="vertical"
+		android:background="#e4e4e3">
 
 		<TextView android:id="@+id/home_label"
 				  android:text="Welcome to the home screen."
@@ -19,5 +20,21 @@
 				  android:layout_centerHorizontal="true"
 				  android:layout_marginTop="25dp"
 				  android:textSize="24dp"/>
+
+		<GridView
+				android:id="@+id/home_music_grid"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:layout_below="@+id/home_label"
+				android:layout_alignParentLeft="true"
+				android:layout_marginTop="22dp"
+				android:numColumns="3"
+				android:verticalSpacing="10dp"
+				android:horizontalSpacing="10dp"
+				android:stretchMode="columnWidth"
+				android:gravity="center"
+				android:layout_marginLeft="10dp"
+				android:layout_marginRight="10dp">
+		</GridView>
 	</RelativeLayout>
 </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
