--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -31,4 +31,14 @@
 		<item name="backgroundSplit">#ff0000</item>
 		<item name="android:backgroundSplit">#ff0000</item>
 	</style>
+
+	<style name="SeeMoreButton">
+		<item name="android:background">@color/holo_blue_dark</item>
+		<item name="android:paddingLeft">5dp</item>
+		<item name="android:paddingRight">5dp</item>
+		<item name="android:textColor">@color/light_bg</item>
+		<item name="android:textSize">12sp</item>
+		<item name="android:minHeight">12dip</item>
+		<item name="android:minWidth">48dip</item>
+	</style>
 </resources>
