--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -36,6 +36,7 @@
 		<item name="android:background">@color/holo_blue_dark</item>
 		<item name="android:paddingLeft">5dp</item>
 		<item name="android:paddingRight">5dp</item>
+		<item name="android:paddingBottom">1dp</item>
 		<item name="android:textColor">@color/light_bg</item>
 		<item name="android:textSize">12sp</item>
 		<item name="android:minHeight">12dip</item>
