--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -4,59 +4,11 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
 
-	<RelativeLayout
-		android:id="@+id/home_root"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:orientation="vertical"
-		android:background="#e4e4e3">
+	<fragment
+			android:id="@+id/home_music_fragment"
+			android:name="org.xbmc.android.sandbox.ui.fragment.AlbumCompactFragment"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			/>
 
-		<TextView android:id="@+id/home_music_title"
-				  android:text="@string/title_music"
-				  android:layout_width="wrap_content"
-				  android:layout_height="wrap_content"
-				  android:layout_marginTop="10dp"
-				  android:layout_marginLeft="15dp"
-				  android:layout_alignParentTop="true"
-				  android:fontFamily="sans-serif-light"
-				  android:textStyle="italic"
-				  android:textSize="22sp"
-				  />
-
-		<TextView
-				android:id="@+id/home_music_subtitle"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_below="@+id/home_music_title"
-				android:layout_alignLeft="@id/home_music_title"
-				android:layout_marginTop="-4dp"
-				android:text="@string/latest_albums"
-				android:textSize="14sp"
-				android:textColor="@color/light_secondry_text"
-				android:fontFamily="sans-serif-light"
-				/>
-
-		<Button
-				android:id="@+id/music_see_more_button"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignTop="@+id/home_music_title"
-				android:layout_alignParentRight="true"
-				android:layout_marginRight="15dp"
-				android:layout_marginTop="15dp"
-				android:text="@string/button_see_more"
-				style="@style/SeeMoreButton"
-				/>
-
-		<fragment
-				android:id="@+id/home_music_grid"
-				android:name="org.xbmc.android.sandbox.ui.fragment.AlbumCompactFragment"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_below="@+id/home_music_subtitle"
-				android:layout_marginLeft="8dp"
-				android:layout_marginRight="8dp"
-				android:layout_marginTop="10dp" />
-
-	</RelativeLayout>
 </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
