--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -4,11 +4,30 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
 
-	<fragment
-			android:id="@+id/home_music_fragment"
-			android:name="org.xbmc.android.sandbox.ui.fragment.AlbumCompactFragment"
+	<ScrollView
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			/>
+			android:layout_height="fill_parent">
 
+		<LinearLayout
+				android:layout_height="wrap_content"
+				android:layout_width="wrap_content"
+				android:orientation="vertical">
+
+			<fragment
+					android:id="@+id/home_music_fragment"
+					android:name="org.xbmc.android.sandbox.ui.fragment.AlbumCompactFragment"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+
+			<fragment
+					android:id="@+id/home_movie_fragment"
+					android:name="org.xbmc.android.sandbox.ui.fragment.MovieCompactFragment"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+
+		</LinearLayout>
+
+	</ScrollView>
 </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
