--- a/res/layout/fragment_home_grid.xml
+++ b/res/layout/fragment_home_grid.xml
@@ -10,26 +10,26 @@
 
 	<TextView
 			style="@style/Header.h1"
-			android:id="@+id/home_music_title"
+			android:id="@+id/home_header1"
 			android:text="@string/title_music"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			/>
 	<TextView
 			style="@style/Header.h2"
-			android:id="@+id/home_music_subtitle"
+			android:id="@+id/home_header2"
 			android:text="@string/latest_albums"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/home_music_title"
-			android:layout_alignLeft="@id/home_music_title"
+			android:layout_below="@id/home_header1"
+			android:layout_alignLeft="@id/home_header1"
 			/>
 
 	<TextView
 			android:id="@id/android:empty"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/home_music_subtitle"
+			android:layout_below="@id/home_header2"
 			android:layout_marginTop="5dp"
 			android:layout_centerHorizontal="true"
 			android:text="@string/empty_albums"
@@ -43,12 +43,12 @@
 			android:id="@+id/music_see_more_button"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignTop="@+id/home_music_title"
+			android:layout_alignTop="@id/home_header1"
 			/>
 
 	<GridView
 			android:id="@id/android:list"
-			android:layout_below="@+id/home_music_subtitle"
+			android:layout_below="@id/home_header2"
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
 			android:layout_marginLeft="8dp"
