--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -32,6 +32,23 @@
 		<item name="android:backgroundSplit">#ff0000</item>
 	</style>
 
+
+	<style name="Header">
+		<item name="android:fontFamily">sans-serif-light</item>
+	</style>
+	<style name="Header.h1">
+		<item name="android:layout_marginTop">10dp</item>
+		<item name="android:layout_marginLeft">15dp</item>
+		<item name="android:layout_alignParentTop">true</item>
+		<item name="android:textStyle">italic</item>
+		<item name="android:textSize">22sp</item>
+	</style>
+	<style name="Header.h2">
+		<item name="android:layout_marginTop">-4dp</item>
+		<item name="android:textColor">@color/light_secondry_text</item>
+		<item name="android:textSize">14sp</item>
+	</style>
+
 	<style name="SeeMoreButton">
 		<item name="android:background">@color/holo_blue_dark</item>
 		<item name="android:paddingLeft">5dp</item>
@@ -41,5 +58,10 @@
 		<item name="android:textSize">12sp</item>
 		<item name="android:minHeight">12dip</item>
 		<item name="android:minWidth">48dip</item>
+		<item name="android:layout_alignParentRight">true</item>
+		<item name="android:layout_marginRight">15dp</item>
+		<item name="android:layout_marginTop">15dp</item>
+		<item name="android:text">@string/button_see_more</item>
 	</style>
+
 </resources>
