Added resources for wizard pager.

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -64,4 +64,14 @@
 		<item name="android:text">@string/button_see_more</item>
 	</style>
 
+	<style name="ButtonBar" parent="@android:style/ButtonBar">
+		<item name="android:background">@android:color/transparent</item>
+		<item name="android:padding">0dp</item>
+	</style>
+
+	<style name="ButtonBarButton">
+		<item name="android:minHeight">@dimen/list_item_height_small</item>
+	</style>
+
+
 </resources>
