--- a/app/src/main/res/layout/activity_accountwizard.xml
+++ b/app/src/main/res/layout/activity_accountwizard.xml
@@ -3,7 +3,7 @@
 			  android:layout_height="match_parent"
 			  android:orientation="vertical" >
 
-	<!--co.juliansuarez.libwizardpager.wizard.ui.StepPagerStrip
+	<co.juliansuarez.libwizardpager.wizard.ui.StepPagerStrip
 			android:id="@+id/strip"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
 			android:paddingBottom="8dp"
 			android:paddingLeft="@dimen/list_item_padding_left"
 			android:paddingRight="@dimen/list_item_padding_right"
-			android:paddingTop="16dp" /-->
+			android:paddingTop="16dp" />
 
 	<android.support.v4.view.ViewPager
 			android:id="@+id/pager"
