--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,5 +85,12 @@
 		<item name="android:fontFamily">sans-serif-light</item>
 	</style>
 
+	<style name="Spinner">
+		<item name="android:indeterminate">true</item>
+		<item name="android:indeterminateDrawable">@drawable/spinner</item>
+		<item name="android:indeterminateDuration">3000</item>
+		<item name="android:indeterminateOnly">true</item>
+	</style>
+
 
 </resources>
