Added wizard page when nothing was found.

--- a/app/src/main/res/layout/fragment_auth_wizard_02a_searching.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_02a_searching.xml
@@ -4,7 +4,7 @@
 			style="@style/WizardPageContainer">
 
 	<TextView style="@style/WizardPageTitle" android:text="@string/accountwizard_step2a_title"
-			  android:id="@+id/textView"/>
+			  android:id="@+id/title"/>
 
 	<ProgressBar
 			android:id="@+id/pb_loading"
