Progress spinner now only fades in when service is started.

--- a/app/src/main/res/layout/fragment_auth_wizard_02a_searching.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_02a_searching.xml
@@ -6,11 +6,12 @@
 			android:id="@+id/title"/>
 
 	<ProgressBar
-			android:id="@+id/pb_loading"
+			android:id="@+id/spinner"
 			style="@style/Spinner"
 			android:layout_width="96dp"
 			android:layout_height="96dp"
 			android:layout_centerVertical="true"
-			android:layout_centerHorizontal="true" />
+			android:layout_centerHorizontal="true"
+			android:visibility="invisible"/>
 
 </RelativeLayout>
