--- a/app/src/main/res/layout/fragment_auth_wizard_03a_host_found.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_03a_host_found.xml
@@ -10,4 +10,14 @@
 			android:layout_alignParentRight="true"
 			android:id="@+id/p1"/>
 
+	<ListView
+			android:id="@+id/list"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/p1"
+			android:layout_centerHorizontal="true"
+			android:layout_marginTop="20dp"
+			android:divider="@android:color/transparent"
+			android:dividerHeight="15dp"/>
+
 </RelativeLayout>
