--- a/app/src/main/res/layout/list_item_album_compact.xml
+++ b/app/src/main/res/layout/list_item_album_compact.xml
@@ -15,7 +15,7 @@
 				android:paddingRight="0dp">
 
 	<RelativeLayout
-			android:id="@+id/list_movie_poster_wrapper"
+			android:id="@+id/thumb_wrapper"
 			android:layout_width="115dp"
 			android:layout_height="115dp">
 
@@ -36,7 +36,7 @@
 			android:id="@+id/title_album"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/list_movie_poster_wrapper"
+			android:layout_below="@id/thumb_wrapper"
 			android:layout_marginTop="5dp"
 			android:layout_marginLeft="5dp"
 			android:layout_alignParentLeft="true"
