--- a/app/src/main/res/drawable/bg_card.xml
+++ b/app/src/main/res/drawable/bg_card.xml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 	<item>
-		<shape android:shape="rectangle"
-			   android:dither="true">
-
+		<shape android:shape="rectangle" android:dither="true">
 			<corners android:radius="2dp"/>
-
 			<solid android:color="#ccc" />
-
 		</shape>
 	</item>
 
 	<item android:bottom="2dp">
-		<shape android:shape="rectangle"
-			   android:dither="true">
-
+		<shape android:shape="rectangle" android:dither="true">
 			<corners android:radius="2dp" />
-
 			<solid android:color="@android:color/white" />
-
 			<padding android:bottom="8dp"
 					 android:left="8dp"
 					 android:right="8dp"
