--- a/app/src/main/res/layout/activity_accountwizard.xml
+++ b/app/src/main/res/layout/activity_accountwizard.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
+			  android:background="@color/light_bg"
 			  android:orientation="vertical" >
 
 	<co.juliansuarez.libwizardpager.wizard.ui.StepPagerStrip
