--- a/app/src/main/res/layout/list_item_host_wide.xml
+++ b/app/src/main/res/layout/list_item_host_wide.xml
@@ -23,7 +23,7 @@
 
 		<TextView
 				android:id="@+id/list_icon"
-				android:text="@string/ic_tv"
+				android:text="@string/ic_computer"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:textColor="#ff767676"
