--- a/app/src/main/res/layout/slidingmenu.xml
+++ b/app/src/main/res/layout/slidingmenu.xml
@@ -4,7 +4,39 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:background="@color/slidingmenu_bg"
-		android:padding="16dp">
+		>
+
+	<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/wrapper1">
+		<Button
+				style="@style/NavigationDrawer"
+				android:id="@+id/change_host"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/ic_computer"
+				android:textSize="30dp"
+				android:layout_alignParentTop="true"
+				android:layout_alignParentRight="true"
+				android:background="@drawable/bg_selectable"
+				android:maxHeight="48dp"
+				android:padding="0dp"/>
+
+		<TextView
+				style="@style/NavigationDrawer.text"
+				android:id="@+id/current_host"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Aquarium"
+				android:textAllCaps="true"
+				android:fontFamily="sans-serif"
+				android:textStyle="bold"
+				android:layout_marginLeft="12dp"
+				android:layout_centerVertical="true"
+				android:layout_alignParentLeft="true"/>
+	</RelativeLayout>
+
+	<View style="@style/Divider" android:id="@+id/divider1"
+		  android:layout_below="@+id/wrapper1"
+		  android:layout_alignParentLeft="true"/>
 
 	<ExpandableListView
 			android:id="@+id/slidingmenu_expandable_list"
@@ -13,6 +45,8 @@
 			android:divider="@color/dark_tertiary_text"
 			android:dividerHeight="1dp"
 			android:childDivider="@color/dark_tertiary_text"
-			android:groupIndicator="@null"/>
+			android:groupIndicator="@null"
+			android:layout_below="@+id/divider1"
+			android:layout_alignParentLeft="true"/>
 
 </RelativeLayout>
