--- a/app/src/main/res/layout/slidingmenu_item.xml
+++ b/app/src/main/res/layout/slidingmenu_item.xml
@@ -8,10 +8,8 @@
 		android:orientation="vertical">
 
 	<TextView
+			style="@style/NavigationDrawer.text"
 			android:id="@+id/label"
-			android:textSize="18sp"
-			android:textColor="@color/dark_secondary_text"
-			android:fontFamily="sans-serif-light"
 			android:layout_height="40dp"
 			android:layout_width="wrap_content"
 			android:gravity="center_vertical"
