--- a/app/src/main/res/layout/slidingmenu_item_expandable.xml
+++ b/app/src/main/res/layout/slidingmenu_item_expandable.xml
@@ -9,21 +9,19 @@
 		android:orientation="vertical">
 
 	<TextView
+			style="@style/NavigationDrawer"
 			android:id="@+id/icon"
 			android:textSize="40dp"
-			android:textColor="@color/dark_secondary_text"
 			android:layout_width="48dp"
 			android:layout_height="wrap_content"
 			android:layout_centerVertical="true"
 			android:layout_alignParentLeft="true"
-			android:layout_marginLeft="8dp"
+			android:layout_marginLeft="12dp"
 			tools:ignore="SpUsage" />
 
 	<TextView
+			style="@style/NavigationDrawer.text"
 			android:id="@+id/label"
-			android:textSize="18sp"
-			android:textColor="@color/dark_secondary_text"
-			android:fontFamily="sans-serif-light"
 			android:layout_width="wrap_content"
 			android:layout_height="48dp"
 			android:layout_centerVertical="true"
@@ -31,9 +29,9 @@
 			android:gravity="center_vertical"/>
 
 	<Button
+			style="@style/NavigationDrawer"
 			android:id="@+id/indicator"
 			android:textSize="24dp"
-			android:textColor="@color/dark_secondary_text"
 			android:layout_width="48dp"
 			android:layout_height="wrap_content"
 			android:background="@null"
