--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,6 @@
 		<item name="android:fontFamily">sans-serif-light</item>
 	</style>
 
-
 	<style name="Header">
 		<item name="android:fontFamily">sans-serif-light</item>
 	</style>
@@ -53,6 +52,29 @@
 		<item name="android:layout_marginTop">-4dp</item>
 		<item name="android:textColor">@color/light_secondry_text</item>
 		<item name="android:textSize">14sp</item>
+	</style>
+
+	<style name="NavigationDrawer">
+		<item name="android:textColor">@color/dark_secondary_text</item>
+	</style>
+	<style name="NavigationDrawer.text">
+		<item name="android:textSize">18sp</item>
+		<item name="android:fontFamily">sans-serif-light</item>
+	</style>
+
+	<style name="NavigationDrawer.glowing">
+		<item name="android:textColor">#ffffffff</item>
+		<item name="android:shadowColor">#ffffffff</item>
+		<item name="android:shadowDx">0</item>
+		<item name="android:shadowDy">0</item>
+		<item name="android:shadowRadius">20</item>
+
+	</style>
+
+	<style name="Divider">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">2dp</item>
+		<item name="android:background">@color/dark_secondary_text</item>
 	</style>
 
 	<style name="SeeMoreButton">
