--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,17 @@
 		<item name="android:fontFamily">sans-serif-light</item>
 	</style>
 
+	<style name="NavigationDrawer.DividerH">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">2dp</item>
+		<item name="android:background">@color/dark_tertiary_text</item>
+	</style>
+	<style name="NavigationDrawer.DividerV">
+		<item name="android:layout_width">1dp</item>
+		<item name="android:layout_height">32dp</item>
+		<item name="android:background">@color/dark_tertiary_text</item>
+	</style>
+
 	<style name="NavigationDrawer.glowing">
 		<item name="android:textColor">#ffffffff</item>
 		<item name="android:shadowColor">#ffffffff</item>
@@ -71,11 +82,6 @@
 
 	</style>
 
-	<style name="Divider">
-		<item name="android:layout_width">match_parent</item>
-		<item name="android:layout_height">2dp</item>
-		<item name="android:background">@color/dark_secondary_text</item>
-	</style>
 
 	<style name="SeeMoreButton">
 		<item name="android:background">@color/holo_blue_dark</item>
