--- a/app/src/main/res/layout/fragment_auth_wizard_02b_nothing_found.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_02b_nothing_found.xml
@@ -5,17 +5,17 @@
 	<TextView style="@style/WizardPageTitle" android:text="@string/accountwizard_step2b_title"
 			android:id="@+id/title"/>
 
-	<TextView style="@style/WizardPageText" android:text="@string/accountwizard_step2b_p1"
+	<TextView style="@style/Paragraph" android:text="@string/accountwizard_step2b_p1"
 			android:layout_below="@+id/title"
 			android:layout_alignParentRight="true"
 			android:id="@+id/p1"/>
 
-	<TextView style="@style/WizardPageText" android:text="@string/accountwizard_step2b_p2"
+	<TextView style="@style/Paragraph" android:text="@string/accountwizard_step2b_p2"
 			android:layout_below="@+id/p1"
 			android:layout_alignParentLeft="true"
 			android:id="@+id/p2"/>
 
-	<TextView style="@style/WizardPageText" android:text="@string/accountwizard_step2b_p3"
+	<TextView style="@style/Paragraph" android:text="@string/accountwizard_step2b_p3"
 			android:id="@+id/p3"
 			android:layout_marginBottom="15dp"
 			android:layout_alignParentBottom="true"
