--- a/app/src/main/res/layout/fragment_auth_wizard_03b_manual_setup.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_03b_manual_setup.xml
@@ -6,7 +6,7 @@
 	<TextView style="@style/WizardPageTitle" android:text="@string/accountwizard_step3b_title"
 			  android:id="@+id/title"/>
 
-	<TextView style="@style/WizardPageText" android:text="@string/accountwizard_step3b_p1"
+	<TextView style="@style/Paragraph" android:text="@string/accountwizard_step3b_p1"
 			  android:layout_below="@+id/title"
 			  android:layout_alignParentRight="true"
 			  android:layout_marginTop="5dp"
