--- a/app/src/main/res/layout/fragment_auth_wizard_04_all_done.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_04_all_done.xml
@@ -4,6 +4,6 @@
 			style="@style/WizardPageContainer">
 
 	<TextView style="@style/WizardPageTitle" android:text="@string/accountwizard_step4_title"/>
-	<TextView style="@style/WizardPageText" android:text="@string/accountwizard_step4_p1"/>
+	<TextView style="@style/Paragraph" android:text="@string/accountwizard_step4_p1"/>
 
 </LinearLayout>
