--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,16 @@
 
 	</style>
 
+	<style name="Paragraph">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginBottom">8dp</item>
+		<item name="android:paddingLeft">@dimen/list_item_padding_left</item>
+		<item name="android:paddingTop">@dimen/list_item_padding_left</item>
+		<item name="android:textSize">18sp</item>
+		<item name="android:textColor">@color/light_primary_text</item>
+		<item name="android:fontFamily">sans-serif-light</item>
+	</style>
 
 	<style name="SeeMoreButton">
 		<item name="android:background">@color/holo_blue_dark</item>
@@ -107,18 +117,6 @@
 		<item name="android:textColor">@color/light_button_text</item>
 		<item name="android:fontFamily">sans-serif-light</item>
 		<!--item name="android:minHeight">@dimen/list_item_height_small</item-->
-	</style>
-
-
-	<style name="WizardPageText">
-		<item name="android:layout_width">match_parent</item>
-		<item name="android:layout_height">wrap_content</item>
-		<item name="android:layout_marginBottom">8dp</item>
-		<item name="android:paddingLeft">@dimen/list_item_padding_left</item>
-		<item name="android:paddingTop">@dimen/list_item_padding_left</item>
-		<item name="android:textSize">18sp</item>
-		<item name="android:textColor">@color/light_primary_text</item>
-		<item name="android:fontFamily">sans-serif-light</item>
 	</style>
 
 	<style name="Spinner">
