--- a/app/src/main/res/layout/slidingmenu.xml
+++ b/app/src/main/res/layout/slidingmenu.xml
@@ -28,7 +28,7 @@
 				android:id="@+id/current_host"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="Aquarium"
+				android:text="@string/host_no_host"
 				android:textAllCaps="true"
 				android:fontFamily="sans-serif"
 				android:textStyle="bold"
