--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,8 +34,7 @@
 	<color name="holo_blue_bright">#00ddff</color>
 
 	<color name="holo_overlay">#9933b5e5</color>
-
-
+	<color name="holo_selected">#4033b5e5</color>
 
 	<color name="slidingmenu_bg">#1c1c1c</color>
 	<color name="slidingmenu_textcolor">#1c1c1c</color>
