--- a/app/src/main/res/drawable/bg_gradient.xml
+++ b/app/src/main/res/drawable/bg_gradient.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+	<corners android:topLeftRadius="2dp" android:bottomLeftRadius="2dp" />
 	<gradient
 			android:type="radial"
 			android:startColor="#ffdbdbdb"
