Added logic for manual host add.

--- a/app/src/main/res/layout/activity_host_choose.xml
+++ b/app/src/main/res/layout/activity_host_choose.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:orientation="vertical"
 		android:background="@color/light_bg">
 
 	<TextView
@@ -70,4 +71,4 @@
 
 	</LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
