--- a/app/src/main/res/layout/fragment_auth_wizard_03b_manual_setup.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_03b_manual_setup.xml
@@ -44,4 +44,14 @@
 			android:layout_marginRight="16dp"
 			android:layout_alignParentLeft="true"/>
 
+	<TextView
+			style="@style/Paragraph" android:text="@string/accountwizard_step3b_message"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:visibility="gone"
+			android:id="@+id/message"
+			android:layout_below="@+id/host"
+			android:layout_centerHorizontal="true"
+			android:layout_marginTop="16dp"/>
+
 </RelativeLayout>
