--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:id="@+id/ptr_layout"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
@@ -18,14 +19,14 @@
 					android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					/>
+					tools:layout="@layout/list_item_album_compact"/>
 
 			<fragment
 					android:id="@+id/home_movie_fragment"
 					android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					/>
+					tools:layout="@layout/list_item_movie_compact"/>
 
 		</LinearLayout>
 
