--- a/app/src/main/res/layout/fragment_home_grid.xml
+++ b/app/src/main/res/layout/fragment_home_grid.xml
@@ -54,7 +54,7 @@
 			android:layout_marginLeft="8dp"
 			android:layout_marginRight="8dp"
 			android:layout_marginTop="10dp"
-			android:numColumns="3"
+			android:numColumns="@integer/home_numrows"
 			android:stretchMode="columnWidth"
 			android:horizontalSpacing="8dp"
 			android:verticalSpacing="8dp"
