--- a/app/src/main/res/layout/list_item_album_compact.xml
+++ b/app/src/main/res/layout/list_item_album_compact.xml
@@ -2,65 +2,65 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="6dp"
-				android:layout_marginRight="6dp"
-				android:layout_marginTop="6dp"
-				android:layout_marginBottom="6dp"
-				android:background="@drawable/bg_card"
-				android:paddingBottom="10dp"
-				android:paddingLeft="0dp"
-				android:paddingTop="0dp"
-				android:paddingRight="0dp">
+	android:layout_width="@dimen/square_compact_width"
+	android:layout_height="wrap_content"
+	android:layout_marginLeft="6dp"
+	android:layout_marginRight="6dp"
+	android:layout_marginTop="6dp"
+	android:layout_marginBottom="6dp"
+	android:background="@drawable/bg_card"
+	android:paddingBottom="10dp"
+	android:paddingLeft="0dp"
+	android:paddingTop="0dp"
+	android:paddingRight="0dp">
 
 	<RelativeLayout
-			android:id="@+id/thumb_wrapper"
-			android:layout_width="115dp"
-			android:layout_height="115dp">
+		android:id="@+id/thumb_wrapper"
+		android:layout_width="@dimen/square_compact_width"
+		android:layout_height="@dimen/square_compact_width">
 
 		<ImageView
-				android:id="@+id/list_album_cover"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_alignParentLeft="true"
-				android:layout_alignParentTop="true"
-				android:adjustViewBounds="true"
-				android:scaleType="centerCrop"
-				android:contentDescription="Poster" />
+			android:id="@+id/list_album_cover"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_alignParentLeft="true"
+			android:layout_alignParentTop="true"
+			android:adjustViewBounds="true"
+			android:scaleType="centerCrop"
+			android:contentDescription="Poster" />
 
 	</RelativeLayout>
 
 	<TextView
-			android:text="title_album"
-			android:id="@+id/title_album"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@id/thumb_wrapper"
-			android:layout_marginTop="5dp"
-			android:layout_marginLeft="5dp"
-			android:layout_alignParentLeft="true"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:textColor="@color/light_primary_text"
-			android:textSize="14sp"
-			android:fontFamily="sans-serif-light"
-			android:maxLines="1"
-			android:ellipsize="marquee" />
+		android:text="title_album"
+		android:id="@+id/title_album"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/thumb_wrapper"
+		android:layout_marginTop="5dp"
+		android:layout_marginLeft="5dp"
+		android:layout_alignParentLeft="true"
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:textColor="@color/light_primary_text"
+		android:textSize="14sp"
+		android:fontFamily="sans-serif-light"
+		android:maxLines="1"
+		android:ellipsize="end" />
 
 	<TextView
-			android:text="title_artist"
-			android:id="@+id/title_artist"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/title_album"
-			android:layout_alignParentLeft="true"
-			android:layout_marginLeft="5dp"
-			android:layout_marginBottom="5dp"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:textColor="@color/light_secondry_text"
-			android:textSize="14sp"
-			android:fontFamily="sans-serif-light"
-			android:maxLines="1"
-			android:ellipsize="marquee"/>
+		android:text="title_artist"
+		android:id="@+id/title_artist"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/title_album"
+		android:layout_alignParentLeft="true"
+		android:layout_marginLeft="5dp"
+		android:layout_marginBottom="5dp"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:textColor="@color/light_secondry_text"
+		android:textSize="14sp"
+		android:fontFamily="sans-serif-light"
+		android:maxLines="1"
+		android:ellipsize="end"/>
 
 </RelativeLayout>
