--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,8 @@
 
 	<ScrollView
 			android:layout_width="fill_parent"
-			android:layout_height="fill_parent">
+			android:layout_height="fill_parent"
+			android:background="@color/light_bg">
 
 		<LinearLayout
 				android:layout_height="wrap_content"
