--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,35 +1,62 @@
-<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+<android.support.v4.widget.DrawerLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		android:id="@+id/ptr_layout"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+		android:id="@+id/drawer_layout"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
 
-	<ScrollView
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"
-			android:background="@color/light_bg">
+	<!-- The main content view -->
+	<FrameLayout
+			android:id="@+id/content_frame"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
 
-		<LinearLayout
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content"
-				android:orientation="vertical">
+		<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+				xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:tools="http://schemas.android.com/tools"
+				android:id="@+id/ptr_layout"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent">
 
-			<fragment
-					android:id="@+id/home_music_fragment"
-					android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
+			<ScrollView
 					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					tools:layout="@layout/list_item_album_compact"/>
+					android:layout_height="fill_parent"
+					android:background="@color/light_bg">
 
-			<fragment
-					android:id="@+id/home_movie_fragment"
-					android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					tools:layout="@layout/list_item_movie_compact"/>
+				<LinearLayout
+						android:layout_height="wrap_content"
+						android:layout_width="wrap_content"
+						android:orientation="vertical">
 
-		</LinearLayout>
+					<fragment
+							android:id="@+id/home_music_fragment"
+							android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							tools:layout="@layout/list_item_album_compact"/>
 
-	</ScrollView>
-</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+					<fragment
+							android:id="@+id/home_movie_fragment"
+							android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							tools:layout="@layout/list_item_movie_compact"/>
+
+				</LinearLayout>
+
+			</ScrollView>
+		</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+	</FrameLayout>
+
+	<!-- The navigation drawer -->
+	<ListView android:id="@+id/left_drawer"
+			  android:layout_width="240dp"
+			  android:layout_height="match_parent"
+			  android:layout_gravity="start"
+			  android:choiceMode="singleChoice"
+			  android:divider="@android:color/transparent"
+			  android:dividerHeight="0dp"
+			  android:background="#111"/>
+
+</android.support.v4.widget.DrawerLayout>
+
+
