Fixed other layouts.

--- a/app/src/main/res/layout-large-land/activity_home.xml
+++ b/app/src/main/res/layout-large-land/activity_home.xml
@@ -9,8 +9,7 @@
 			android:name="org.xbmc.android.app.ui.menu.SlidingMenuFragment"
 			tools:layout="@layout/slidingmenu"/>
 
-	<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
-
+	<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
 			android:id="@+id/ptr_layout"
 			android:layout_toRightOf="@id/navdrawer"
 			android:layout_width="fill_parent"
@@ -41,7 +40,6 @@
 						tools:layout="@layout/list_item_movie_compact"/>
 
 			</LinearLayout>
-
 		</ScrollView>
-	</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+	</uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
 </RelativeLayout>
