--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,56 +1,52 @@
 <android.support.v4.widget.DrawerLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:id="@+id/drawer_layout"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/drawer_layout"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
 	<!-- The main content view -->
+	<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
+			xmlns:android="http://schemas.android.com/apk/res/android"
+			xmlns:tools="http://schemas.android.com/tools"
+			android:id="@+id/ptr_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent">
 
-		<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
-				xmlns:android="http://schemas.android.com/apk/res/android"
-				xmlns:tools="http://schemas.android.com/tools"
-				android:id="@+id/ptr_layout"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent">
+		<ScrollView
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:background="@color/light_bg">
 
-			<ScrollView
+			<LinearLayout
+				android:layout_height="wrap_content"
+				android:layout_width="wrap_content"
+				android:orientation="vertical">
+
+				<fragment
+					android:id="@+id/home_music_fragment"
+					android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
 					android:layout_width="fill_parent"
-					android:layout_height="fill_parent"
-					android:background="@color/light_bg">
+					android:layout_height="wrap_content"
+					tools:layout="@layout/list_item_album_compact"/>
 
-				<LinearLayout
-						android:layout_height="wrap_content"
-						android:layout_width="wrap_content"
-						android:orientation="vertical">
+				<fragment
+					android:id="@+id/home_movie_fragment"
+					android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					tools:layout="@layout/list_item_movie_compact"/>
 
-					<fragment
-							android:id="@+id/home_music_fragment"
-							android:name="org.xbmc.android.app.ui.fragment.AlbumCompactFragment"
-							android:layout_width="fill_parent"
-							android:layout_height="wrap_content"
-							tools:layout="@layout/list_item_album_compact"/>
-
-					<fragment
-							android:id="@+id/home_movie_fragment"
-							android:name="org.xbmc.android.app.ui.fragment.MovieCompactFragment"
-							android:layout_width="fill_parent"
-							android:layout_height="wrap_content"
-							tools:layout="@layout/list_item_movie_compact"/>
-
-				</LinearLayout>
-
-			</ScrollView>
-		</uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
+			</LinearLayout>
+		</ScrollView>
+	</uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
 
 	<!-- The navigation drawer -->
-	<ListView android:id="@+id/left_drawer"
-			  android:layout_width="240dp"
-			  android:layout_height="match_parent"
-			  android:layout_gravity="start"
-			  android:choiceMode="singleChoice"
-			  android:divider="@android:color/transparent"
-			  android:dividerHeight="0dp"
-			  android:background="#111"/>
+	<fragment
+		android:id="@+id/left_drawer"
+		android:layout_width="@dimen/slidingmenu_width"
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:name="org.xbmc.android.app.ui.menu.SlidingMenuFragment" />
 
 </android.support.v4.widget.DrawerLayout>
 
