--- a/app/src/main/res/layout-xlarge-land/activity_home.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_home.xml
@@ -6,7 +6,7 @@
 			android:id="@+id/navdrawer"
 			android:layout_width="@dimen/slidingmenu_width"
 			android:layout_height="fill_parent"
-			android:name="org.xbmc.android.app.ui.menu.SlidingMenuFragment"
+			android:name="org.xbmc.android.app.ui.menu.NavigationDrawerFragment"
 			tools:layout="@layout/slidingmenu"/>
 
 	<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
